logs/turtlesim/build.make.036.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:61:76: error: no match for ‘operator=’ (operand types are ‘ros::Publisher’ and ‘ros::Subscriber’)
   waypoint_sub=nh_.subscribe("waypoint", 1, &Turtle::waypointCallback, this);
                                                                            ^
In file included from /opt/ros/melodic/include/ros/node_handle.h:32:0,
                 from /opt/ros/melodic/include/ros/ros.h:45,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:35,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/opt/ros/melodic/include/ros/publisher.h:47:21: note: candidate: ros::Publisher& ros::Publisher::operator=(const ros::Publisher&)
   class ROSCPP_DECL Publisher
                     ^~~~~~~~~
/opt/ros/melodic/include/ros/publisher.h:47:21: note:   no known conversion for argument 1 from ‘ros::Subscriber’ to ‘const ros::Publisher&’
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
